<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="companyName">Zen Faktor</string>
	<string name="orderTitle">Order</string>
	<string name="logoString">ZF</string>
	<string name="app_name">Zen Faktor</string>
	<string name="username">Username:</string>
	<string name="password">Password:</string>
	<string name="loginText">Log In</string>
	<string name="categoryTitle">Categories</string>
	<string name="subCategoryTitle">Sub-Categories</string>
	<string name="menuTitle">Menu</string>
	<string name="browseItems">Browse</string>
	<string name="logOut">Log Out</string>
	<string name="orders">Orders</string>
	<string name="browserTitle">Categories</string>

	<string name="orderUpdated">Order updated: </string>
	<string name="orderModified">Your order has been modified</string>

	<string name="actorsLabel">Actors: </string>
	<string name="formatLabel">Format: </string>
	<string name="languageLabel">Language: </string>
	<string name="subtitlesLabel">Subtitles: </string>
	<string name="regionLabel">Region: </string>
	<string name="numberOfDiscsLabel">Number of discs: </string>
	<string name="releaseDateLabel">Release date: </string>
	<string name="runTimeLabel">Run time: </string>
	<string name="asinLabel">ASIN: </string>
	<string name="authorsLabel">Authors: </string>
	<string name="publisherLabel">Publisher: </string>
	<string name="publishedDateLabel">Published date: </string>
	<string name="isbn10Label">ISBN 10: </string>
	<string name="isbn13Label">ISBN 13: </string>

	<string name="created">Created</string>
	<string name="confirmed">Confirmed</string>
	<string name="transported">Transported</string>
	<string name="delivered">Delivered</string>

	<string name="orderStatusLabel">Status: </string>
	<string name="orderShippedDateLabel">Created date: </string>
	<string name="orderLocationLabel">Location: </string>
	<string name="orderInformation">Order Information</string>
	<string name="orderProductBtn">View product list</string>
	<string name="orderLocationBtn">View order location</string>

	<string name="connectionError">There seems to be a connectivity problem. Please
		check your internet access.</string>

	<string name="listHint">Hint: Type in some text at any time to filter the
		lists!</string>
	<string name="notLoggedIn">You need to log in to access this area</string>
</resources>
